--- a/更新笔记.md
+++ b/更新笔记.md
@@ -5,17 +5,26 @@
 #### SSH方法
 
 1. 打开git工具
+   
    - git bash here
+   
 2. 配置/查看用户名和邮箱
    - git config -l
    - git config user.name "Your Name"
    - git config user.email "Your Email"
+   
 3. 生成连接的密钥
    - ssh-keygen -t rsa -C "email@email.com"
    - 密钥存放在：C:\Users\Administrator\\.ssh\id_rsa.pub
+   
 4. 将密钥与github进行绑定
+   
    - github头像 --> settings --> SSH and GPG keys --> NEW SSH key
+   
 5. 测试连接
+
+   - 连接指定仓库git remote add origin
+
    - ssh -T git@github.com
    - 出现 Hi "Your Name"! 就是连接成功
 
